# glyphx

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compile_issue.yml  config.yml  crash_report.yml  feature_request.yml  performance_issue.yml  ux_ui_issue.yml
.github/workflows/: ci-desktop.yml  deploy-web.yml  release-desktop.yml
apps/desktop/: .gitignore  .prettierignore  README.md  package.json  vite.config.ts
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: compile.rs  engine.rs  git.rs  lib.rs  main.rs  project.rs  shell_integration.rs  subprocess.rs
apps/desktop/src/lib/: compile.ts  engine.ts  git.ts  launch.ts  prefetch.ts  project.ts  save.ts  tauri-theme.ts  updater-card.svelte  updater.svelte.ts
apps/desktop/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  layout.css
apps/web/: .env.example  .prettierignore  README.md  eslint.config.js  motion-core.json  package.json  vite.config.ts  wrangler.jsonc
apps/web/docs/: self-host-texlive.md
apps/web/src/: app.html  service-worker.ts
apps/web/src/lib/: FloatingGlyphs.svelte  (+4 more)
scripts/dev/: setup-tectonic.mjs
scripts/release/: download-tectonic.mjs  generate-latest-json.sh  install-linux-deps.sh  rename-macos-updater-bundle.sh  sync-version.mjs
(+22 files in other folders)
