[package]
name = "glyphx"
version = "0.1.0"
description = "GlyphX — local-first, privacy-first LaTeX editor (desktop shell)"
authors = ["GlyphX"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glyphx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
# Pure-Rust Git (no system git / C deps) — keeps the client OS-agnostic and able
# to cross-compile to mobile later. Default features use pure-Rust zlib.
# Pure-Rust HTTPS transport (reqwest + rustls) for clone/fetch — no curl/C dep,
# keeping the network path cross-platform too.
gix = { version = "0.70", features = ["status", "dirwalk", "blob-diff", "revision", "tree-editor", "blocking-http-transport-reqwest-rust-tls"] }
# Text diffing for the Source Control diff view (pure Rust).
similar = "2"
